# bpc

./: .gitignore  Dockerfile.estimator  Dockerfile.estimator.base  Dockerfile.tester  README.md  Troubleshoot.md  ibpc.py  ipd  results  tester.rviz
.github/workflows/: build.yaml  style.yaml  test.yaml
SuperGluePretrainedNetwork/: superglue.py
bop_evaluation_csv_generation/: main.py  output.csv  pose_estimation_results.csv  pose_estimation_results_fastest.csv
bop_evaluation_csv_generation/registration_results/: confidence_report.txt
data_analysis/: compare_results.py  config.yaml  filtered_dataset.csv  funcs.py  ground_truths_tab.py  optimize_pose.py  pose_estimator.py  process_scene_data.py  pxl_2_point.py  read_dataset.py  read_test_dataset.py  results.csv  streamlit_app.py  test.py  test_results_tab.py  ui.py  update_detection_json.py
data_analysis/helpers/: process_scene_data.py  process_scene_data_w_backup_pose_estimation.py  pxl_2_point.py  pxl_to_point.py  train_new_dataset.py  update_detection_json.py
data_analysis/maskRCNN/: dataset.py  inference.py  model.py  train.py
data_analysis/pcl_builder/: create_pointcloud.py  requirements.txt  (+1 more)
generate_defined_poses_images/: README.md  project._multi_orientations.py  requirements.txt
gt_annotation_viewer/: annotation_viewer.py
ibpc/: ibpc.py
ibpc_interfaces/: CMakeLists.txt  package.xml
ibpc_interfaces/msg/: Camera.msg  Photoneo.msg  PoseEstimate.msg
ibpc_interfaces/srv/: GetPoseEstimates.srv
ibpc_pose_estimator/: CMakeLists.txt  package.xml
ibpc_pose_estimator/src/: ibpc_pose_estimator.cpp  ibpc_pose_estimator.hpp
ibpc_pose_estimator_py/: package.xml  setup.cfg  setup.py
ibpc_pose_estimator_py/ibpc_pose_estimator_py/: ibpc_pose_estimator.py
ibpc_py/: README.md  setup.py
ibpc_tester/: package.xml  setup.cfg  setup.py
initial_pose_estimation/: README.md  build_search_index.py  extract_features.py  match_pose.py  predict_pose.py  requirements.txt  train_regression_model.py
maskRCNN/: README.md  categories.txt  dataset.py  inference.py  inference_with_visualization.py  model.py  requirements.txt  train.py
maskRCNN-resnet-50-fpn/: README.md  custom_dataset.py  dataset_stats.py  generate_masks.py  inference.py  pytorch_dataset.py  requirements.txt  train_model.py  visualize_dataset.py
models/: README.md
new_pose_estimator/: estimate_pose.py  optimize_pose.py  optimize_pose_backup.py
pcl_builder/: README.md  create_pointcloud.py  output_metadata.json  ros_pointcloud_generator.py
pointcloud_registration/: README.md  clean_pcl.py  image_based_registration.py  image_based_registration_gms.py  image_based_registration_normals.py  image_based_registration_pnp.py  image_based_registration_superglue.py  image_matching.py  pointcloud_processor copy.py  pointcloud_processor.py  pointcloud_registration.py  register.py  requirements.txt  robust_registration.py
polygon_creation/: build_dataset.py  build_dataset_depth.py
pose_estimation_nn/: estimate_pose.py  train.py
pose_estimation_pipeline/: README.md  config.yaml  main.py  pose_estimation_pipeline.py  world_transformation.py
reproject/: project.py
roi_extraction/: README.md  roi_extraction.py
sam/: ReadMe.MD  custom_training_script.py  detect.py  sam_inference_script.py
similarity_search_and_PnP/: point_matcher.py
test_pipeline/: config.yaml  homogrpahy_to_pose.py  pose_estimator.py  process_scene_data copy.py  process_scene_data.py  pxl_to_point.py  test_pipeline copy.py  test_pipeline.ipynb  test_pipeline.py  tmp.json  update_detection_json.py
utilities/: camera_parameters.csv  combine_dataset_with_limit.py  combine_datasets.py  dataset_poses.csv  dataset_preparation.py  filter_csv copy.py  filter_csv.py  filtered_dataset.csv  folder_tree.sh  generate_output_csv.py  gt_csv.py  json_content_changer.py  test_csv.py  test_dataset.csv
(+40 files in other folders)
