<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ibpc_pose_estimator_py</name>
  <version>0.0.0</version>
  <description>ROS 2 node for pose estimation in python</description>
  <maintainer email="yadunund@gmail.com">Yadunund Vijay</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>ibpc_interfaces</exec_depend>

  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
